force-app/main/default/objects/Csv_Config__c/Csv_Config__c.object-meta.xml
<CustomObject>
    <description>Configuration object to store csv parsing mappings and other associated settings</description>
    <label>Csv Config</label>
    <nameField>
        <label>Csv Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Csv Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>