force-app/main/default/objects/Csv_Config__c/fields/Field_Map__c.field-meta.xml
<CustomField>
    <fullName>Field_Map__c</fullName>
    <description>Comma separated field map in the form: Column1:Field1,Column2:Field2,...,ColumnN:FieldN</description>
    <inlineHelpText>Comma separated field map in the form: Column1:Field1,Column2:Field2,...,ColumnN:FieldN</inlineHelpText>
    <label>Field Map</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>