force-app/main/default/objects/Csv_Config__c/fields/Has_Lookups__c.field-meta.xml
<CustomField>
    <fullName>Has_Lookups__c</fullName>
    <defaultValue>false</defaultValue>
    <description>specifies if this config has lookups to parent objects</description>
    <inlineHelpText>specifies if this config has lookups to parent objects</inlineHelpText>
    <label>Has Lookups</label>
    <type>Checkbox</type>
</CustomField>