force-app/main/default/objects/Csv_Config__c/fields/Lookup_Config__c.field-meta.xml
<CustomField>
    <fullName>Lookup_Config__c</fullName>
    <description>Field Map in the form LookupObject1:SfLookupField1:LookupField1,LookupObject2:SfLookupField2:LookupField2,... LookupObjectN:SfLookupFieldN:LookupFieldN</description>
    <inlineHelpText>Field Map in the form LookupObject1:SfLookupField1:LookupField1,LookupObject2:SfLookupField2:LookupField2,... LookupObjectN:SfLookupFieldN:LookupFieldN</inlineHelpText>
    <label>Lookup Config</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>