force-app/main/default/objects/Csv_Config__c/fields/Record_Type_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Id__c</fullName>
    <description>The target record type Id for the records being created.</description>
    <label>Record Type Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>