force-app/main/default/objects/Csv_Config__c/fields/Sobject_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Sobject_Api_Name__c</fullName>
    <description>The api name of the destination Sobject</description>
    <inlineHelpText>The api name of the destination Sobject</inlineHelpText>
    <label>Sobject Api Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>